salida del trabajo

--- a/index2.html
+++ b/index2.html
@@ -81,19 +81,21 @@
                     <p>Cajero - Repositor</p>
                 </div>
                 <div class="col" class="descripcion">
-                <p>Aprendi de todo, Desde manejar el software de caja, manejar efectivo, utilizar postnet. hasta reponer y dar mantenimiento a las maquinas</p>
+                <p>Aprendi de todo, Desde manejar el software de caja, manejar efectivo, utilizar postnet. hasta reponer y dar mantenimiento a las maquinas.</p>
             </div>
         </div>
         ------------------------------------------------------------------------------------------------------
-        <div class="row">
+        <div class="row" id="arcoiris">
             <div class="col" class="logo">
-
+                <img src="arcoiris.png
+                " alt="">
             </div>
             <div class="col" class="empresa">
-
+                <h2>Arcoiris S.A</h2>
+                <P>Encargado de vinoteca</P>
             </div>
             <div class="col" class="descripcion">
-
+                <p>Aprendi sobre logistica y control de stock, ademas de marketing en lo referido a marcas de vino y bodegas.</p>
             </div>
         </div>
         <div class="row">
