--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
                     <div class="col col-lg-9 col-md-9 col-sm-9 col-xs-12" id="superiorPresentacion">
                         <h2 id="nombreTitulo">Leonardo Velazque</h2>
                         <h3 id="carrera">Full Stack Developer Jr.</h3>  
-                        <h2>Sobre mí</h2> 
+                        <h2>Sobre mí:</h2> 
                     </div>
                         <p id="texto">Soy una persona que disfruta de probar cosas nuevas, siempre dispuesto a salir de la zona de confort con tal de descubrir y aprender. 
                         <p id="texto">Me encanta la tecnologia ya que con ella podemos crear y mejorar nuestro entorno, y mis hobbys favoritos dependen de ella!
@@ -71,44 +71,67 @@
     <!--experiencia-->
     <div class="container-fluid" id="experiencia">
         <h1>Experiencia</h1>
-            ------------------------------------------------------------------------------------------------------
-            <div class="row" id="top">
-                <div class="col" class="logo">
-                    <img src="logo supertop.png" alt="logoSuperTop" id="logoSuperTop">
-                </div>
-                 <div class="col" class="empresa">
-                    <h2>Supermercados Top</h2>
-                    <p>Cajero - Repositor</p>
-                </div>
-                <div class="col" class="descripcion">
-                <p>Aprendi de todo, Desde manejar el software de caja, manejar efectivo, utilizar postnet. hasta reponer y dar mantenimiento a las maquinas.</p>
+        ------------------------------------------------------------------------------------------------------
+        <div class="row" id="sindicato">
+            <div class="col" class="logo">
+                <img src="logo sindicato.png" alt="logoSindicato" id="logoSindicato">
+            </div>
+            <div class="col" class="empresa">
+                <h2>Sindicato Petroleros Privados</h2>
+                <p>IT - soporte tecnico</p>
+            </div>
+            <div class="col col-sm-12" class="descripcion">
+                <p>Al ser el unico personal en sistemas me encargo de manejar el servidor, la base de datos, mantenimiento de equipos, programacion basica PHP, analisis y busqueda en DB (Xammp), manteninimiento de impresoras, control de active directory y redes de comunicacion, internet y telefonia.</p>
             </div>
         </div>
         ------------------------------------------------------------------------------------------------------
+
+        <div class="row" id="homeland">
+            <div class="col" class="logo">
+                <img src="logo homeland.jfif" alt="logoHomeland" id="logoHomeland">
+            </div>
+            <div class="col" class="empresa">
+                <h2>Homeland security</h2>
+                <p>tecnico - vigilante</p>
+            </div>
+            <div class="col col-sm-12 col-md-12" class="descripcion">
+                <p>control e instalacion de sistemas de seguridad: alarmas, sensores y camaras</p>
+            </div>
+        </div>
+
+        ------------------------------------------------------------------------------------------------------
         <div class="row" id="arcoiris">
             <div class="col" class="logo">
-                <img src="arcoiris.png
-                " alt="">
+                <img src="arcoiris.png" alt="logoArcoiris" id="logoArcoiris">
             </div>
             <div class="col" class="empresa">
                 <h2>Arcoiris S.A</h2>
-                <P>Encargado de vinoteca</P>
+                <P>mantenimiento - soporte tecnico</P>
             </div>
-            <div class="col" class="descripcion">
-                <p>Aprendi sobre logistica y control de stock, ademas de marketing en lo referido a marcas de vino y bodegas.</p>
+            <div class="col col-sm-12 col-ms12" class="descripcion">
+                <p>Mantenimiento predictivo y mantenimiento de equipos y cajas.</p>
             </div>
         </div>
-        <div class="row">
+        ------------------------------------------------------------------------------------------------------
+        <div class="row" id="top">
             <div class="col" class="logo">
-
+                <img src="logo supertop.png" alt="logoSuperTop" id="logoSuperTop">
             </div>
-            <div class="col" class="empresa">
-
+             <div class="col" class="empresa">
+                <h2>Supermercados Top</h2>
+                <p>Cajero - Repositor</p>
             </div>
-            <div class="col" class="descripcion">
-
+            <div class="col col-sm-12 col-md-12" class="descripcion">
+            <p id="descripcion">Aprendi de todo, Desde manejar el software de caja, manejar efectivo, utilizar postnet. hasta reponer y dar mantenimiento a las maquinas.</p>
             </div>
         </div>
+    </div>
+    <div class="container-fluid" id="educacion">
+        <h1>EDUCACION</h1>
+        <div class="row" id="yoProgramo"></div>
+        <div class="row" id="seProgramar"></div>
+        <div class="row" id="freeCodeCamp"></div>
+        <div class="row" id="EpetN16"></div>
     </div>
     
 </body>
